fix: corregir warnings SonarQube S6204 y S1192 en 4 archivos